2007-07-31  Jon Nettleton  <set EMAIL_ADDRESS environment variable>

	* src/via_xvmc.c: (ViaInitXVMC):

	Fixed the xvmc name we register.  Was still looking for
	the old via xvmc library names.

2007-07-04  Xavier Bachelot <xavier-at-bachelot-dot-org>

	* configure.ac:
	* src/via_driver.c: (VIAPreInit):
	* src/via_driver.h:

	Bump driver version to 0.2.900.
	Do not log detected chipset 2 times.
	Remove duplicate changelog entry.

2007-06-14  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>

	* configure.ac:
	* libxvmc/viaLowLevel.h:
	* src/via.h:
	* src/via_accel.c: (viaFlushPCI), (viaInitPCIe), (viaEnableAgpVQ),
	(viaEnablePCIeVQ), (viaDisableVQ), (viaInitialize2DEngine),
	(viaAccelSync), (viaInitXAA), (viaInitExa), (viaInitAccel):
	* src/via_bandwidth.c: (ViaSetPrimaryFIFO), (ViaSetSecondaryFIFO):
	* src/via_dri.c: (VIADRIRingBufferInit):
	* src/via_driver.c: (VIASetupDefaultOptions), (VIAPreInit),
	(VIALeaveVT), (VIASave), (VIAScreenInit), (VIACloseScreen):
	* src/via_driver.h:
	* src/via_id.c: (ViaDoubleCheckCLE266Revision), (ViaCheckCardId):
	* src/via_id.h:
	* src/via_mode.c: (ViaGetMemoryBandwidth), (ViaModePrimary):
	* src/via_mode.h:
	* src/via_regs.h:
	* src/via_swov.c: (viaWaitHQVFlip), (viaWaitHQVDone),
	(VIAVidHWDiffInit), (viaCalculateVideoColor), (viaSetColorSpace),
	(ViaInitVideoStatusFlag), (ViaSetVidCtl), (AddHQVSurface),
	(SetFIFO_V3), (SetFIFO_V3_64or32or32), (SetFIFO_V3_64or32or16),
	(SetColorKey), (SetChromaKey), (SetHQVFetch), (Upd_Video),
	(VIAVidUpdateOverlay), (ViaOverlayHide):
	* src/via_swov.h:
	* src/via_vbe.c: (ViaVbeSetMode):
	* src/via_video.c: (DecideOverlaySupport), (viaInitVideo), (Flip),
	(viaDmaBlitImage), (viaPutImage):
	* src/via_video.h:
	* src/via_xvmc.c: (ViaInitXVMC):

	Pulled in Changes from the experimental_branch including
		- Partial support for VIA_K8M890, VIA_P4M900, VIA_CX700,
				      VIA_P4M890
		- Added the VideoEngine option to help clean up code
		- Ability to enable debugging with the configure script 
