@@ -55,17 +55,17 @@ static struct {
     CARD8 Device; /* equal to index */
     CARD32 Bandwidth[VIA_MEM_END];
 } ViaBandwidthTable[VIA_BW_ALL] = {
-    { VIA_BW_CLE266A, { VIA_BW_MIN, VIA_BW_MIN, VIA_BW_MIN,  394000000,  461000000, VIA_BW_MIN, VIA_BW_MIN, VIA_BW_MIN } },
-    { VIA_BW_CLE266C, { VIA_BW_MIN, VIA_BW_MIN, VIA_BW_MIN,  394000000,  461000000, VIA_BW_MIN, VIA_BW_MIN, VIA_BW_MIN } },
-    { VIA_BW_KM400,   { VIA_BW_MIN, VIA_BW_MIN, VIA_BW_MIN,  394000000,  461000000,  461000000, VIA_BW_MIN, VIA_BW_MIN } },
-    { VIA_BW_KM400A,  { VIA_BW_MIN, VIA_BW_MIN, VIA_BW_MIN,  394000000,  461000000,  461000000,  461000000, VIA_BW_MIN } },
-    { VIA_BW_K8M800,  { VIA_BW_MIN, VIA_BW_MIN, VIA_BW_MIN,  394000000,  461000000,  461000000,  461000000, VIA_BW_MIN } },
-    { VIA_BW_PM800,   { VIA_BW_MIN, VIA_BW_MIN, VIA_BW_MIN,  394000000,  461000000,  461000000,  461000000,  922000000 } },
-    { VIA_BW_VM800,   { VIA_BW_MIN, VIA_BW_MIN, VIA_BW_MIN,  394000000,  461000000,  461000000,  461000000,  922000000 } },
-    { VIA_BW_K8M890,  { VIA_BW_MIN, VIA_BW_MIN, VIA_BW_MIN,  394000000,  461000000,  461000000,  461000000,  922000000 } },
-    { VIA_BW_P4M900,  { VIA_BW_MIN, VIA_BW_MIN, VIA_BW_MIN,  394000000,  461000000,  461000000,  461000000,  922000000 } },
-    { VIA_BW_CX700,   { VIA_BW_MIN, VIA_BW_MIN, VIA_BW_MIN,  394000000,  461000000,  461000000,  461000000,  922000000 } },
-    { VIA_BW_P4M890,  { VIA_BW_MIN, VIA_BW_MIN, VIA_BW_MIN,  394000000,  461000000,  461000000,  461000000,  922000000 } }
+    { VIA_BW_CLE266A, { VIA_BW_MIN, VIA_BW_MIN, VIA_BW_MIN,  394000000,  461000000, VIA_BW_MIN, VIA_BW_MIN, VIA_BW_MIN, VIA_BW_MIN } },
+    { VIA_BW_CLE266C, { VIA_BW_MIN, VIA_BW_MIN, VIA_BW_MIN,  394000000,  461000000, VIA_BW_MIN, VIA_BW_MIN, VIA_BW_MIN, VIA_BW_MIN } },
+    { VIA_BW_KM400,   { VIA_BW_MIN, VIA_BW_MIN, VIA_BW_MIN,  394000000,  461000000,  461000000, VIA_BW_MIN, VIA_BW_MIN, VIA_BW_MIN } },
+    { VIA_BW_KM400A,  { VIA_BW_MIN, VIA_BW_MIN, VIA_BW_MIN,  394000000,  461000000,  461000000,  461000000, VIA_BW_MIN, VIA_BW_MIN } },
+    { VIA_BW_K8M800,  { VIA_BW_MIN, VIA_BW_MIN, VIA_BW_MIN,  394000000,  461000000,  461000000,  461000000, VIA_BW_MIN, VIA_BW_MIN } },
+    { VIA_BW_PM800,   { VIA_BW_MIN, VIA_BW_MIN, VIA_BW_MIN,  394000000,  461000000,  461000000,  461000000,  922000000, VIA_BW_MIN } },
+    { VIA_BW_VM800,   { VIA_BW_MIN, VIA_BW_MIN, VIA_BW_MIN,  394000000,  461000000,  461000000,  461000000,  922000000, VIA_BW_MIN } },
+    { VIA_BW_K8M890,  { VIA_BW_MIN, VIA_BW_MIN, VIA_BW_MIN,  394000000,  461000000,  461000000,  461000000,  922000000, VIA_BW_MIN } },
+    { VIA_BW_P4M900,  { VIA_BW_MIN, VIA_BW_MIN, VIA_BW_MIN,  394000000,  461000000,  461000000,  461000000,  922000000,  922000000 } },
+    { VIA_BW_CX700,   { VIA_BW_MIN, VIA_BW_MIN, VIA_BW_MIN,  394000000,  461000000,  461000000,  461000000,  922000000, VIA_BW_MIN } },
+    { VIA_BW_P4M890,  { VIA_BW_MIN, VIA_BW_MIN, VIA_BW_MIN,  394000000,  461000000,  461000000,  461000000,  922000000, VIA_BW_MIN } }
 };
     
 /*
